<resources>
    <string name="app_name">FitGym</string>
    <string name="action_settings">Settings</string>

    <!-- Strings related to MainActivity -->
    <string name="welcome_message">Who are you?</string>
    <string name="login_message">Log In as %1$s</string>
    <string name="role_name">I\'m <b>%1$s!</b></string>
    <string name="title_activity_login_gym_company">Sign in as Gym Company</string>
    <string name="title_activity_login_personal_trainer">Sign in as Personal Trainer</string>
    <string name="title_activity_login_client">Sign in as Client</string>

    <!-- Strings related to Register Company -->
    <string name="title_company_info"></string>

    <!-- Strings related to Login / Welcome -->
    <string name="register_message">Do you have a Gym?</string>
    <string name="link_to_landing"><a href="https://jrojas96.github.io/admin/home.html">Visit our Web Page!</a></string>
    <string name="login_account">Username</string>
    <string name="login_password">Password</string>
    <string name="sign_in_button_message">Sign In</string>
    <string name="sign_up_button_message">Sign Up</string>
    <string name="information_message">New on FitGym ?</string>
    <string name="url_to_gc_landing">https://jrojas96.github.io/web-landing/HomeGym.html</string>

    <!-- Strings related to Gym Company Navigation -->
    <string name="trained_by_trainer">Trained by %1$s</string>

    <!-- Activity titles -->
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_register_gym_company">RegisterGymCompanyActivity</string>
    <string name="title_activity_my_clients">MyClientsActivity</string>
    <string name="title_activity_new_client">NewClientActivity</string>
    <string name="title_activity_subscription_type">SubscriptionTypeActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_navigation_trainer">NavigationTrainerActivity</string>
    <string name="title_activity_navigation_gym_company">NavigationGymCompanyActivity</string>
    <string name="title_activity_navigation_client">NavigationClientActivity</string>
    <string name="title_activity_about_client">About Client</string>
    <string name="title_activity_about_personal_trainer">About Personal Trainer</string>
    <string name="title_activity_add_food">AddFoodActivity</string>
    <string name="title_activity_add_edit_personal_trainer">AddEditPersonalTrainer</string>
    <string name="title_activity_about_client_trainer">About Client</string>
    <string name="title_activity_schedule_trainer">Schedule</string>
    <string name="title_activity_add_edit_client">AddEditClientActivity</string>
    <string name="title_activity_client_routines">Client Routines</string>
    <string name="title_activity_food_diets">Client Diets</string>
    <string name="title_activity_routine_details">Routine Details</string>
    <string name="title_activity_add_edit_routine_detail">AddEditRoutineDetailActivity</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!-- Strings related to fragments -->
    <string name="title_gym_company_personal">My Personal</string>
    <string name="title_gym_company_company">My Company</string>
    <string name="title_gym_company_account">My Account</string>
    <string name="title_gym_company_settings">My Settings</string>
    <string name="title_trainer_clients">My Clients</string>
    <string name="title_trainer_activities">My Activities</string>
    <string name="title_trainer_settings">My Settings</string>
    <string name="title_client_routines">My Routines</string>
    <string name="title_client_food_diet">My Diet</string>
    <string name="title_client_progress">My Progress</string>
    <string name="title_client_settings">My Settings</string>

    <!-- Forms String Messages -->
    <string name="form_field_required">This field is required</string>
    <string name="form_field_password_confirmation">Password must match</string>
    <string name="form_field_already_registered">Account already registered</string>
    <string name="form_field_invalid_email">Invalid email</string>
    <string name="form_field_invalid">Invalid input</string>
    <string name="form_field_min_length">Must have %1$s characters at least</string>
    <string name="form_field_max_length">Must have less than %1$s characters</string>

    <!-- Alert String Messages -->
    <string name="alert_invalid_login">Invalid username or password</string>
    <string name="alert_save_success">Changes saved</string>
    <string name="alert_delete_success">Record deleted</string>
    <string name="alert_create_success">Entry created</string>

    <!-- Message Buttons Strings -->
    <string name="message_button_ok">OK</string>
    <string name="message_button_yes">Yes</string>
    <string name="message_button_no">No</string>
    <string name="message_button_continue">Continue</string>
    <string name="message_button_got_it">Got it</string>

    <!-- Input Forms Strings -->
    <string name="hello_blank_fragment">Hello Blank Fragment!</string>
    <string name="input_trainer_first_name">First Name</string>
    <string name="input_trainer_last_name">Last Name</string>
    <string name="input_trainer_username">Username</string>
    <string name="input_trainer_password">Password</string>
    <string name="input_trainer_confirm_password">Confirm Password</string>
    <string name="input_trainer_gender">Gender</string>
    <string name="input_trainer_birth_date">Birth Date</string>
    <string name="input_trainer_address">Address</string>
    <string name="input_trainer_phone_number">Phone Number</string>
    <string name="input_trainer_created_at">Account Creation</string>
    <string name="input_trainer_sample_first_name">Sample Name</string>
    <string name="input_trainer_sample_last_name">Sample Name</string>
    <string name="input_trainer_sample_username">Sample Username</string>
    <string name="input_trainer_sample_gender">Gender</string>
    <string name="spinner_trainer_gender">Select Gender</string>
    <string name="spinner_client_gender">Select Gender</string>
    <string name="spinner_activity_type">Select Activity</string>
    <string name="spinner_establishment">Select Establishment</string>
    <string name="input_trainer_sample_birth_date">Sample Date</string>
    <string name="input_trainer_sample_address">Sample Address</string>
    <string name="input_trainer_sample_phone_number">Sample Number</string>
    <string name="input_trainer_sample_created_at">Sample Date</string>
    <string name="title_activity_add_edit_establishment">AddEditEstablishment</string>
    <string name="title_activity_add_edit_type">AddEditActivityTypeActivity</string>
    <string name="input_activity_type_description">Description</string>
    <string name="input_activity_type_sample_description">Sample Description</string>
    <string name="input_establishment_name">Name</string>
    <string name="input_establishment_latitude">Latitude</string>
    <string name="input_establishment_longitude">Longitude</string>
    <string name="input_establishment_created_at">Register Creation</string>
    <string name="input_establishment_sample_name">Sample Name</string>
    <string name="input_establishment_sample_latitude">Latitude Position</string>
    <string name="input_establishment_sample_longitude">Longitude Position</string>
    <string name="input_establishment_sample_created_at">Sample Date</string>
    <string name="title_activity_about_establishment">About Establishment</string>
    <string name="input_settings_gym_account">Sample Gym</string>
    <string name="input_settings_gym_account_description">Account Information</string>
    <string name="input_settings_gym_help">Help</string>
    <string name="input_settings_gym_help_description">Help</string>
    <string name="input_settings_gym_share">Share</string>
    <string name="input_settings_gym_share_description">Share</string>
    <string name="input_settings_gym_subscriptions">Subscriptions</string>
    <string name="input_settings_gym_susbscriptions_description">Check your payment information</string>
    <string name="input_settings_gym_version">Version</string>
    <string name="input_settings_gym_sample_version">1.1</string>
    <string name="title_activity_add_edit_routine">AddEditRoutineActivity</string>
</resources>
