<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.teamgym.fitgym.activities.gymcompany.AboutPersonalTrainerActivity"
    tools:showIn="@layout/activity_about_personal_trainer">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:padding="@dimen/activity_horizontal_margin">

            <ImageView
                android:id="@+id/usernameImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                app:srcCompat="@drawable/ic_person_outline_black_24dp"/>
            <TextView
                android:id="@+id/usernameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_toEndOf="@id/usernameImageView"
                android:layout_toRightOf="@id/usernameImageView"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:text="@string/input_trainer_sample_username"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/usernameTextView"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@id/usernameImageView"
                android:layout_toRightOf="@id/usernameImageView"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:text="@string/input_trainer_username"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:padding="@dimen/activity_horizontal_margin">

            <ImageView
                android:id="@+id/birthDateImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                app:srcCompat="@drawable/ic_birthdate"/>
            <TextView
                android:id="@+id/birthDateTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_toEndOf="@id/birthDateImageView"
                android:layout_toRightOf="@id/birthDateImageView"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:text="@string/input_trainer_sample_birth_date"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/birthDateTextView"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@id/birthDateImageView"
                android:layout_toRightOf="@id/birthDateImageView"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:text="@string/input_trainer_birth_date"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:padding="@dimen/activity_horizontal_margin">

            <ImageView
                android:id="@+id/genderImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                app:srcCompat="@drawable/ic_gender_symbols"/>
            <TextView
                android:id="@+id/genderTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_toEndOf="@id/genderImageView"
                android:layout_toRightOf="@id/genderImageView"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:text="@string/input_trainer_sample_gender"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/genderTextView"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@id/genderImageView"
                android:layout_toRightOf="@id/genderImageView"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:text="@string/input_trainer_gender"/>
        </RelativeLayout>

        <include layout="@layout/item_divider" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:padding="@dimen/activity_horizontal_margin">

            <ImageView
                android:id="@+id/phoneNumberImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                app:srcCompat="@drawable/ic_phone_black_24dp"/>
            <TextView
                android:id="@+id/phoneNumberTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_toEndOf="@id/phoneNumberImageView"
                android:layout_toRightOf="@id/phoneNumberImageView"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:text="@string/input_trainer_sample_phone_number"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/phoneNumberTextView"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@id/phoneNumberImageView"
                android:layout_toRightOf="@id/phoneNumberImageView"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:text="@string/input_trainer_phone_number"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:padding="@dimen/activity_horizontal_margin">

            <ImageView
                android:id="@+id/addressImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                app:srcCompat="@drawable/ic_location_on_black_24dp"/>
            <TextView
                android:id="@+id/addressTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_toEndOf="@id/addressImageView"
                android:layout_toRightOf="@id/addressImageView"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:text="@string/input_trainer_sample_address"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/addressTextView"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@id/addressImageView"
                android:layout_toRightOf="@id/addressImageView"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:text="@string/input_trainer_address"/>
        </RelativeLayout>

        <include layout="@layout/item_divider" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:padding="@dimen/activity_horizontal_margin">

            <ImageView
                android:id="@+id/createdAtImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                app:srcCompat="@drawable/ic_fitness_center_black_24dp"/>

            <TextView
                android:id="@+id/createdAtTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_toEndOf="@id/createdAtImageView"
                android:layout_toRightOf="@id/createdAtImageView"
                android:text="@string/input_trainer_sample_created_at"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/createdAtTextView"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@id/createdAtImageView"
                android:layout_toRightOf="@id/createdAtImageView"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:text="@string/input_trainer_created_at"/>
        </RelativeLayout>

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
